[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Altar/altar.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Altar/Altar.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Altar/Rune.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Runes/rune2BIG.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Runes/rune3BIG.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Runes/rune4BIG.png" type="Texture" id=6]
[ext_resource path="res://Scenes/interface/theme/default_theme.tres" type="Theme" id=7]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "ritual_finished"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -10, 0 ), Vector2( 10, 0 ), Vector2( -20, 0 ), Vector2( 20, 0 ), Vector2( 30, 0 ), Vector2( -30, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ), Vector2( 50, 0 ), Vector2( -50, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.682353, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Altar" type="Node2D"]
script = ExtResource( 2 )

[node name="Prompt" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="CanvasLayer" type="CanvasLayer" parent="Prompt"]
layer = 2

[node name="ColorRect" type="ColorRect" parent="Prompt/CanvasLayer"]
margin_right = 1920.0
margin_bottom = 1082.0
color = Color( 0, 0, 0, 0.784314 )

[node name="Label" type="Label" parent="Prompt/CanvasLayer"]
margin_left = 213.0
margin_right = 1659.0
margin_bottom = 1080.0
theme = ExtResource( 7 )
text = "O altar aguarda as runas.
As runas devem ser colocadas nos locais correspondentes para desbloquear o poder supremo."
align = 1
valign = 1
autowrap = true

[node name="PromptButton" type="TextureButton" parent="Prompt/CanvasLayer"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="AltarSprite" type="Sprite" parent="."]
position = Vector2( 969, 686 )
scale = Vector2( 9, 9 )
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 810.0
margin_top = 960.0
margin_right = 1169.0
margin_bottom = 1072.0
alignment = 1

[node name="Rune1" type="TextureButton" parent="HBoxContainer"]
margin_left = 11.0
margin_right = 115.0
margin_bottom = 112.0
texture_normal = ExtResource( 6 )
script = ExtResource( 3 )

[node name="Rune2" type="TextureButton" parent="HBoxContainer"]
margin_left = 119.0
margin_right = 231.0
margin_bottom = 112.0
texture_normal = ExtResource( 5 )
script = ExtResource( 3 )

[node name="Rune3" type="TextureButton" parent="HBoxContainer"]
margin_left = 235.0
margin_right = 347.0
margin_bottom = 112.0
texture_normal = ExtResource( 4 )
script = ExtResource( 3 )

[node name="Rune1Nestle" type="Position2D" parent="."]
position = Vector2( 1003, 307 )

[node name="Rune2Nestle" type="Position2D" parent="."]
position = Vector2( 332, 375 )

[node name="Rune3Nestle" type="Position2D" parent="."]
position = Vector2( 1579, 375 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/ritual_finished = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 1, 1, 1, 0 )

[connection signal="pressed" from="Prompt/CanvasLayer/PromptButton" to="." method="_on_PromptButton_pressed"]
[connection signal="button_down" from="HBoxContainer/Rune1" to="HBoxContainer/Rune1" method="_on_Rune_button_down"]
[connection signal="button_down" from="HBoxContainer/Rune2" to="HBoxContainer/Rune2" method="_on_Rune_button_down"]
[connection signal="button_down" from="HBoxContainer/Rune3" to="HBoxContainer/Rune3" method="_on_Rune_button_down"]
